# storage/api-docs/api-docs.json
@@ -198,6 +198,24 @@
                 ],
                 "summary": "Store a newly created item",
                 "operationId": "store",
+                "parameters": [
+                    {
+                        "name": "img_main",
+                        "in": "query",
+                        "description": "The image to upload",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    {
+                        "name": "file_main",
+                        "in": "query",
+                        "description": "The file to upload",
+                        "schema": {
+                            "type": "file"
+                        }
+                    }
+                ],
                 "requestBody": {
                     "description": "Request body description",
                     "required": true,
@@ -210,7 +228,7 @@
                                 "slug": "eating-clean",
                                 "title": "Eating Clean",
                                 "layout": "img-body",
-                                "img_main": "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/page/1482170055i/33511107.jpg",
+                                "img_link": "",
                                 "body": "<p>Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu <i>‘sehat’</i> bagi tubuh kita.</p>"
                             }
                         }
